# gpu_mm

./: .gitignore  Makefile  README.md  choose_python_install_dir.py  conda_env.yaml  makefile_helper.py  meson.build  pyproject.toml
gpu_mm/: __init__.py  __main__.py  gpu_mm.py  gpu_pointing.py  gpu_utils.py  pycufft.py  tests.py  tests_mpi.py
include/: PlanIterator.hpp  PlanIterator2.hpp  cnpy.hpp  gpu_mm.hpp  gpu_mm2.hpp  gpu_mm2_internals.hpp  gpu_mm_internals.hpp  plan_iterator.hpp
pip/: README.md  meson.build
python/: __init__.py  __main__.py  gpu_mm.py  gpu_pointing.py  gpu_utils.py  pycufft.py  tests.py
scripts/: gpu_mm.py  gpu_mm_example.py  make-xpointing-npzfile.py  make-xpointing-npzfiles.sh  npz-to-h5.py  test_cufft.py  test_fit_subsamp_gpu.py  test_fit_subsamp_gpu_clean.py
src_bin/: scratch.cu  test-map2tod.cu  test-plan-iterator.cu  test-plan-iterator2.cu  test-pointing-plan.cu  test-preplan.cu  test-tod2map.cu  time-map2tod.cu  time-plan-iterator.cu  time-pointing-plan.cu  time-preplan.cu  time-simple-tod2map.cu  time-tod2map.cu
src_lib/: ActPointing.cu  CpuPointingPlan.cu  LocalPixelization.cu  OldPointingPlan.cu  PointingPlan.cu  PointingPlanIterator.cu  PointingPlanTester.cu  PointingPrePlan.cu  QuantizedPointing.cu  ReferencePointingPlan.cu  ToyPointing.cu  cell_broadcast.cu  cell_reduce.cu  check_arguments.cu  cnpy.cu  cuts.cu  deglitching.cu  expand_dynamic_map.cu  gpu_point.cu  gpu_utils.cu  local_map_to_global.cu  map2tod.cu  map2tod2.cu  map2tod_old.cu  map2tod_reference.cu  map2tod_response.cu  map2tod_unplanned.cu  misc.cu  pycufft.cu  python_exports.cu  simple_map2tod.cu  simple_tod2map.cu  test_plan_iterator.cu  test_pointing.cu  time_cufft.cu  tod2map.cu  tod2map2.cu  tod2map3.cu  tod2map4.cu  tod2map_old.cu  (+3 more)
src_pybind11/: gpu_mm_pybind11.cu
src_python/gpu_mm/: __init__.py  __main__.py  gpu_mm.py  gpu_pointing.py  pycufft.py  tests.py  tests_mpi.py
