[build-system]
build-backend = 'mesonpy'
requires = [ 'meson-python', 'pybind11', 'numpy' ]

# NOTE: I decided not to specify 'cupy' as a dependency, in order to avoid triggering
# a pip install of cupy (since cupy is difficult to install with pip but straightforward
# with other tools, e.g. conda).
#
# NOTE: I'm not specifying 'ksgpu' as a dependency, due to some technical issues that
# I hope to resove soon. (Currently, if pip tries to recursively install ksgpu, it will
# appear to succeed, but the resulting module will be un-importable. It's better to fail
# outright, so that the user knows to install ksgpu by hand.)

[project]
name = 'gpu_mm'
version = '0.0.1'
dependencies = [ 'meson-python', 'pybind11', 'numpy' ]
description = 'CMB map-making on GPUs'
# readme = 'README.md'
# requires-python = '>=3.8'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

# https://meson-python.readthedocs.io/en/latest/how-to-guides/meson-args.html
[tool.meson-python.args]
setup = ['-Db_ndebug=false']  # don't compile with -DNDEBUG (which disables asserts)
compile = ['--verbose']       # only takes effect if 'pip install' is invoked with '-v' flag
