[project]
name = 'gpu_mm'
version = '0.0.2'
dependencies = [ 'pybind11', 'numpy', 'ksgpu' ]
description = 'CMB map-making on GPUs'
requires-python = '>=3.8'
# readme = 'README.md'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

[build-system]
build-backend = 'pipmake'
requires = [ 'pipmake', 'pybind11', 'numpy' ]

# NOTE: I decided not to specify 'cupy' as a dependency, in order to avoid triggering
# a pip install of cupy (since cupy is difficult to install with pip but straightforward
# with other tools, e.g. conda).
